--- a/CurrentSchedules.html
+++ b/CurrentSchedules.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>~Current Schedules~</title>
-    <link rel="stylesheet" href="TMR.css">
+    <link rel="stylesheet" href="TMR.css?v=20251203a">
     <link rel="stylesheet" href="backgrounds.css">
 </head>
 <body class="page-background triangle-background currentschedules-page">
