Add export/import data buttons to TMR dropdown menu

--- a/TMR.html
+++ b/TMR.html
@@ -112,6 +112,11 @@
                     <button id="manage-subs-btn" class="small-tmr-btn" type="button" style="margin-top:6px;margin-left:6px;">Manage subscriptions</button>
                 </div>
             </div>
+            <div class="tmr-menu-item" style="border-top:1px solid #ccc; padding-top:8px; margin-top:8px;">
+                <button id="export-data-btn" class="small-tmr-btn" type="button">Export data</button>
+                <button id="import-data-btn" class="small-tmr-btn" type="button" style="margin-top:6px;">Import data</button>
+                <input id="import-file-input" type="file" accept=".json" hidden />
+            </div>
             
         </div>
     </div>
