Remove refresh button from TMR.html dropdown, add refresh button to CurrentSchedules.html dropdown

--- a/CurrentSchedules.html
+++ b/CurrentSchedules.html
@@ -26,6 +26,9 @@
             </div>
             <div id="tmr-menu-todo-list" class="tmr-menu-todo" hidden></div>
             <div class="tmr-menu-item">
+                <button id="refresh-btn-menu" type="button" class="small-tmr-btn">Refresh</button>
+            </div>
+            <div class="tmr-menu-item">
                 <button type="button" class="leave-button tmr-btn" style="width:100%;" onclick="window.location.href='TMR.html'">Back</button>
             </div>
         </div>
