--- a/TMR.html
+++ b/TMR.html
@@ -9,8 +9,8 @@
     <!-- Comprehensive mobile layout override (v3) -->
     <style>
     @media (max-width:600px){
-      /* Reset body and main layout */
-      body { padding-top:160px !important; margin:0; overflow-x:hidden}
+      /* Reset body and main layout - add bottom padding for modal space */
+      body { padding-top:160px !important; padding-bottom:10px !important; margin:0; overflow-x:hidden}
       
       /* Keep TMR tag in top corner, small */
       #TMR-tag { position:fixed !important; top:8px !important; left:8px !important; z-index:3000 !important}
