Add import/export buttons to mobile calendar and remove white background

--- a/CurrentSchedules.html
+++ b/CurrentSchedules.html
@@ -105,6 +105,9 @@
             <button id="mobile-prev-month" class="mobile-nav-btn">&lt;</button>
             <div class="month-year"></div>
             <button id="mobile-next-month" class="mobile-nav-btn">&gt;</button>
+            <button id="mobile-export-btn" class="mobile-nav-btn">Export</button>
+            <button id="mobile-import-btn" class="mobile-nav-btn">Import</button>
+            <input id="mobile-import-file" type="file" accept=".json" style="display:none">
         </div>
 
         <div class="mobile-calendar-grid-container">
