--- a/CurrentSchedules.html
+++ b/CurrentSchedules.html
@@ -35,6 +35,15 @@
         </div>
     </div>
 
+    <!-- Clock (positioned next to TMR dropdown on top of calendar) -->
+    <div class="clock-container schedule-page-clock">
+        <div class="clock-outer-box">
+            <div class="clock-inner-box">
+                <div id="clock"></div>
+            </div>
+        </div>
+    </div>
+
     <!-- Calendar app -->
     <div id="calendar-app" class="calendar-app">
         <div class="calendar-header">
@@ -58,17 +67,8 @@
             </div>
             <ul id="todo-list" class="todo-list" aria-live="polite"></ul>
         </div>
-        <div id="weekday-row" class="weekday-row" aria-hidden="false"></div>
+            <div id="weekday-row" class="weekday-row" aria-hidden="false"></div>
     <div id="calendar" class="calendar-grid" aria-label="Monthly calendar"></div>
-    </div>
-
-    <!-- Clock (moved below calendar) -->
-    <div class="clock-container">
-        <div class="clock-outer-box">
-            <div class="clock-inner-box">
-                <div id="clock"></div>
-            </div>
-        </div>
     </div>
 
     <!-- Day / event modal -->
