Redesign mobile modal to center with blur backdrop and move clock below calendar on mobile

--- a/CurrentSchedules.html
+++ b/CurrentSchedules.html
@@ -35,15 +35,6 @@
         </div>
     </div>
 
-    <!-- Clock (positioned next to TMR dropdown on top of calendar) -->
-    <div class="clock-container schedule-page-clock">
-        <div class="clock-outer-box">
-            <div class="clock-inner-box">
-                <div id="clock"></div>
-            </div>
-        </div>
-    </div>
-
     <!-- Calendar app -->
     <div id="calendar-app" class="calendar-app">
         <div class="calendar-header">
@@ -69,6 +60,15 @@
         </div>
             <div id="weekday-row" class="weekday-row" aria-hidden="false"></div>
     <div id="calendar" class="calendar-grid" aria-label="Monthly calendar"></div>
+    </div>
+
+    <!-- Clock (below calendar) -->
+    <div class="clock-container">
+        <div class="clock-outer-box">
+            <div class="clock-inner-box">
+                <div id="clock"></div>
+            </div>
+        </div>
     </div>
 
     <!-- Day / event modal -->
