Move clock inside mobile calendar container so it appears below calendar cells

--- a/CurrentSchedules.html
+++ b/CurrentSchedules.html
@@ -62,15 +62,6 @@
     <div id="calendar" class="calendar-grid" aria-label="Monthly calendar"></div>
     </div>
 
-    <!-- Clock (below calendar) -->
-    <div class="clock-container">
-        <div class="clock-outer-box">
-            <div class="clock-inner-box">
-                <div id="clock"></div>
-            </div>
-        </div>
-    </div>
-
     <!-- Day / event modal -->
     <div id="event-modal" class="modal hidden" aria-hidden="true">
         <div class="modal-content">
@@ -113,6 +104,15 @@
         <div class="mobile-calendar-grid-container">
             <div class="mobile-weekday-row" id="mobile-weekday-row"></div>
             <div class="mobile-calendar-grid" id="mobile-calendar-grid"></div>
+        </div>
+
+        <!-- Clock (below calendar on mobile) -->
+        <div class="clock-container">
+            <div class="clock-outer-box">
+                <div class="clock-inner-box">
+                    <div id="clock"></div>
+                </div>
+            </div>
         </div>
 
         <div id="mobile-modal-backdrop" class="mobile-modal-backdrop">
