Create landscape mode with right-aligned calendar and vertical clock positioned under TMR dropdown

--- a/CurrentSchedules.html
+++ b/CurrentSchedules.html
@@ -90,6 +90,15 @@
         </div>
     </div>
 
+    <!-- Landscape mode clock container (separate from calendar) -->
+    <div id="landscape-clock-container" class="landscape-clock-container">
+        <div class="landscape-clock-outer-box">
+            <div class="landscape-clock-inner-box">
+                <div id="landscape-clock"></div>
+            </div>
+        </div>
+    </div>
+
     <!-- Mobile Calendar Container (hidden on desktop, shown on mobile) -->
     <div id="mobile-calendar-container">
         <div class="mobile-calendar-header">
@@ -106,7 +115,7 @@
             <div class="mobile-calendar-grid" id="mobile-calendar-grid"></div>
         </div>
 
-        <!-- Clock (below calendar on mobile) -->
+        <!-- Clock (below calendar on mobile portrait) -->
         <div class="clock-container">
             <div class="clock-outer-box">
                 <div class="clock-inner-box">
