Force CSS cache refresh for calendar-mobile.css

--- a/CurrentSchedules.html
+++ b/CurrentSchedules.html
@@ -6,7 +6,7 @@
     <title>~Current Schedules~</title>
     <link rel="stylesheet" href="TMR.css?v=20251208d">
     <link rel="stylesheet" href="backgrounds.css">
-    <link rel="stylesheet" href="calendar-mobile.css">
+    <link rel="stylesheet" href="calendar-mobile.css?v=20251208a">
 </head>
 <body class="page-background triangle-background currentschedules-page">
 
