Add fullscreen buttons to both dropdown menus with JavaScript fullscreen API support

--- a/CurrentSchedules.html
+++ b/CurrentSchedules.html
@@ -30,6 +30,9 @@
                 <button id="refresh-btn-menu" type="button" class="small-tmr-btn">Refresh</button>
             </div>
             <div class="tmr-menu-item">
+                <button id="fullscreen-btn-cs" type="button" class="small-tmr-btn">Fullscreen</button>
+            </div>
+            <div class="tmr-menu-item">
                 <button type="button" class="leave-button tmr-btn" style="width:100%;" onclick="window.location.href='TMR.html'">Back</button>
             </div>
         </div>
