--- a/TMR.html
+++ b/TMR.html
@@ -117,6 +117,9 @@
                 <button id="import-data-btn" class="small-tmr-btn" type="button" style="margin-top:6px;">Import data</button>
                 <input id="import-file-input" type="file" accept=".json" hidden />
             </div>
+            <div class="tmr-menu-item">
+                <button id="fullscreen-btn-tmr" type="button" class="small-tmr-btn">Fullscreen</button>
+            </div>
             
         </div>
     </div>
