--- a/TMR.html
+++ b/TMR.html
@@ -263,14 +263,14 @@
         @media (max-width: 1024px) and (orientation: landscape) {
             body {
                 display: flex;
-                flex-direction: row;
+                flex-direction: column;
                 height: 100vh;
                 overflow: hidden;
             }
 
             .calendar-page {
                 display: flex;
-                flex-direction: row;
+                flex-direction: column;
                 width: 100%;
                 height: 100%;
             }
@@ -308,6 +308,7 @@
                 background: linear-gradient(to bottom, #f5f5f5, #e8e8e8);
                 flex-shrink: 0;
                 align-items: flex-end;
+                order: -1;
             }
 
             .calendar-buttons button {
@@ -341,14 +342,19 @@
 
             /* Tab content visibility */
             .calendar-section {
-                display: none;
                 flex: 1;
                 overflow-y: auto;
                 overflow-x: hidden;
+                order: 0;
+            }
+
+            .calendar-section:not(.active) {
+                display: none;
             }
 
             .calendar-section.active {
                 display: flex;
+                flex-direction: column;
             }
 
             /* Modal sections for tabs */
@@ -441,6 +447,7 @@
                 background: linear-gradient(to bottom, #f5f5f5, #e8e8e8);
                 flex-shrink: 0;
                 align-items: flex-end;
+                order: -1;
             }
 
             .calendar-buttons button {
@@ -474,14 +481,19 @@
 
             /* Tab content visibility */
             .calendar-section {
-                display: none;
                 flex: 1;
                 overflow-y: auto;
                 overflow-x: hidden;
+                order: 0;
+            }
+
+            .calendar-section:not(.active) {
+                display: none;
             }
 
             .calendar-section.active {
                 display: flex;
+                flex-direction: column;
             }
 
             /* Modal sections for tabs */
