--- a/TMR.html
+++ b/TMR.html
@@ -397,6 +397,67 @@
                 max-height: none;
                 border-radius: 0;
                 width: 100%;
+                display: flex;
+                flex-direction: column;
+            }
+
+            .meibot-header {
+                padding: 16px;
+                border-bottom: 2px solid #ddd;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                flex-shrink: 0;
+            }
+
+            .meibot-header h2 {
+                margin: 0;
+            }
+
+            .meibot-close {
+                background: none;
+                border: none;
+                font-size: 24px;
+                cursor: pointer;
+                padding: 0;
+                color: #333;
+            }
+
+            .meibot-chat {
+                flex: 1;
+                overflow-y: auto;
+                padding: 16px;
+                background: #f9f9f9;
+            }
+
+            .meibot-typing {
+                padding: 10px;
+                text-align: center;
+                flex-shrink: 0;
+            }
+
+            #meibot-modal-form {
+                padding: 12px 16px;
+                border-top: 1px solid #e0e0e0;
+                display: flex;
+                gap: 8px;
+                flex-wrap: wrap;
+                flex-shrink: 0;
+            }
+
+            #meibot-modal-input {
+                flex: 1;
+                min-width: 150px;
+                padding: 10px 12px;
+                border: 1px solid #ddd;
+                border-radius: 6px;
+                font-size: 14px;
+            }
+
+            #meibot-modal-input:focus {
+                outline: none;
+                border-color: var(--accent-color, #0089f1);
+                box-shadow: 0 0 4px rgba(0,137,241,0.3);
             }
 
             /* Hide persistent panels */
@@ -537,6 +598,67 @@
                 max-height: none;
                 border-radius: 0;
                 width: 100%;
+                display: flex;
+                flex-direction: column;
+            }
+
+            .meibot-header {
+                padding: 16px;
+                border-bottom: 2px solid #ddd;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                flex-shrink: 0;
+            }
+
+            .meibot-header h2 {
+                margin: 0;
+            }
+
+            .meibot-close {
+                background: none;
+                border: none;
+                font-size: 24px;
+                cursor: pointer;
+                padding: 0;
+                color: #333;
+            }
+
+            .meibot-chat {
+                flex: 1;
+                overflow-y: auto;
+                padding: 16px;
+                background: #f9f9f9;
+            }
+
+            .meibot-typing {
+                padding: 10px;
+                text-align: center;
+                flex-shrink: 0;
+            }
+
+            #meibot-modal-form {
+                padding: 12px 16px;
+                border-top: 1px solid #e0e0e0;
+                display: flex;
+                gap: 8px;
+                flex-wrap: wrap;
+                flex-shrink: 0;
+            }
+
+            #meibot-modal-input {
+                flex: 1;
+                min-width: 150px;
+                padding: 10px 12px;
+                border: 1px solid #ddd;
+                border-radius: 6px;
+                font-size: 14px;
+            }
+
+            #meibot-modal-input:focus {
+                outline: none;
+                border-color: var(--accent-color, #0089f1);
+                box-shadow: 0 0 4px rgba(0,137,241,0.3);
             }
 
             /* Hide persistent panels */
@@ -775,32 +897,31 @@
     </div>
 
     <!-- TODO MODAL (for mobile) -->
-    <div id="todo-modal-backdrop" class="todo-modal-backdrop" hidden>
+    <div id="todo-modal-backdrop" class="todo-modal-backdrop">
         <div class="todo-modal" role="dialog" aria-modal="true" aria-labelledby="todo-modal-title">
             <h3 id="todo-modal-title">To Do</h3>
             <div class="todo-input-row">
                 <input id="todo-modal-input" type="text" placeholder="Add a todo..." />
                 <input id="todo-modal-minutes-input" type="number" min="0" placeholder="remind in (min)" style="width:110px;" />
                 <button id="todo-modal-add" class="small-tmr-btn">Add</button>
-                <button id="todo-modal-close" class="small-tmr-btn">Close</button>
             </div>
             <ul id="todo-modal-list" class="todo-list"></ul>
         </div>
     </div>
 
     <!-- MEIBOT MODAL (for mobile) -->
-    <div id="meibot-modal" class="meibot-modal hidden" style="display: none; position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0,0,0,0.5); z-index: 9998; align-items: center; justify-content: center;">
-        <div class="meibot-modal-content" style="background: white; border-radius: 12px; width: 90%; max-width: 600px; max-height: 90vh; display: flex; flex-direction: column; overflow: hidden;">
-            <div class="meibot-header" style="padding: 16px; border-bottom: 2px solid #ddd; display: flex; justify-content: space-between; align-items: center;">
-                <h2 style="margin: 0;">Meibot</h2>
-                <button id="meibot-modal-close" class="meibot-close" style="background: none; border: none; font-size: 24px; cursor: pointer;">&times;</button>
+    <div id="meibot-modal" class="meibot-modal">
+        <div class="meibot-modal-content">
+            <div class="meibot-header">
+                <h2>Meibot</h2>
+                <button id="meibot-modal-close" class="meibot-close">&times;</button>
             </div>
-            <div id="meibot-modal-chat" class="meibot-chat" style="flex: 1; overflow-y: auto; padding: 16px; background: #f9f9f9;"></div>
-            <div id="meibot-modal-typing" class="meibot-typing hidden" style="display: none; padding: 10px; text-align: center;">
+            <div id="meibot-modal-chat" class="meibot-chat"></div>
+            <div id="meibot-modal-typing" class="meibot-typing hidden">
                 <span>Meibot is thinking...</span>
             </div>
-            <form id="meibot-modal-form" class="meibot-form" style="padding: 16px; border-top: 2px solid #ddd; display: flex; gap: 8px;">
-                <input id="meibot-modal-input" type="text" placeholder="Ask me anything..." style="flex: 1; padding: 10px; border: 1px solid #ddd; border-radius: 6px;" />
+            <form id="meibot-modal-form" class="meibot-form">
+                <input id="meibot-modal-input" type="text" placeholder="Ask me anything..." />
                 <button type="submit" class="tmr-btn small-tmr-btn">Send</button>
             </form>
         </div>
@@ -872,6 +993,12 @@
 
             if (meiBtn) {
                 meiBtn.addEventListener('click', () => switchTab('meibot'));
+            }
+
+            // Close button for meibot modal (mobile)
+            const meibotCloseBtn = document.getElementById('meibot-modal-close');
+            if (meibotCloseBtn) {
+                meibotCloseBtn.addEventListener('click', () => switchTab('calendar'));
             }
 
             // Initialize with calendar tab active
